--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -1,4 +1,4 @@
-<section class="property-binding">
+<!-- <section class="property-binding"> -->
     <!-- <article>
         <h3>Interpolation / Interpolação</h3>
         <p>String renderizada com interpolação/ meu LinkedIn: {{ url }}</p>
@@ -13,7 +13,7 @@
         <img [src]="urlImagem">
     </article> -->
 
-    <article>
+    <!-- <article>
         <h3>Class e Style Binding</h3>
         <div>
             Selecione uma classe:
@@ -37,5 +37,32 @@
         
         <div class="alert alert-danger" role="alert" [style.display]="classe.value == 'alert-danger' ? 'block' : 'none'">Esse texto somente aparece em caso de erro.</div>
 
+    </article>
+</section> -->
+
+<section class="event-binding">
+    <article>
+        <h3>Event Binding</h3>
+        <div>
+            <button (click)="botaoClicado()" class="btn btn-primary">Me clique!</button>
+        <br><br>
+
+        <input type="text" 
+            (keyup)="onKeyUp($event)" 
+            (keyup.enter)="salvarValor(campoInput.value)"
+            (blur)="salvarValor(campoInput.value)"
+            #campoInput/>
+        
+        <p>Valor atual: {{ valorAtual }}</p>
+        <p>Valor salvo: {{ valorSalvo }}</p>
+        
+        <br>
+        <span
+            (mouseover)="onMouseOverOut()"
+            (mouseout)="onMouseOverOut()"
+            [class.highlight]="isMouseOver">
+            Passe o mouse sobre mim
+        </span>
+        </div>
     </article>
 </section>
