--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -40,7 +40,7 @@
     </article>
 </section> -->
 
-<section class="event-binding">
+<!-- <section class="event-binding">
     <article>
         <h3>Event Binding</h3>
         <div>
@@ -63,6 +63,30 @@
             [class.highlight]="isMouseOver">
             Passe o mouse sobre mim
         </span>
+        </div>
+    </article>
+</section> -->
+
+<section class="two-way-binding">
+    <article>
+        <h3>Two-way data binding</h3>
+        <div>
+            <input type="text"
+                [value]="nome"
+                />
+            <input type="text"
+                [ngModel]="nome"
+                (ngModelChange)="nome = $event"
+                />
+            <input type="text" [(ngModel)]="nome">
+            <input type="text" bindon-ngModel="nome">
+
+            <p>Você digitou: {{ nome }}</p>
+        </div>
+        <div>
+            <p>Meu nome é {{ pessoa.nome }} e tenho {{ pessoa.idade }} anos de idade</p>
+            <input type="text" [(ngModel)]="pessoa.nome">
+            <input type="text" [(ngModel)]="pessoa.idade">
         </div>
     </article>
 </section>
