--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -67,7 +67,7 @@
     </article>
 </section> -->
 
-<section class="two-way-binding">
+<!-- <section class="two-way-binding">
     <article>
         <h3>Two-way data binding</h3>
         <div>
@@ -88,5 +88,13 @@
             <input type="text" [(ngModel)]="pessoa.nome">
             <input type="text" [(ngModel)]="pessoa.idade">
         </div>
+    </article>
+</section> -->
+
+<section class="input-output-properties">
+    <article>
+        <h3>Input/Output Properties</h3>
+
+        <app-curso [nome]="nomeDoCurso"></app-curso>
     </article>
 </section>
