--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -96,5 +96,7 @@
         <h3>Input/Output Properties</h3>
 
         <app-curso [nome]="nomeDoCurso"></app-curso>
+
+        <contador></contador>
     </article>
 </section>
